--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,6 @@
 cmake_minimum_required(VERSION 3.20)
-project(Algorithm)
-set( CMAKE_CXX_FLAGS "-std=c++14")
+project(algorithm)
+
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Algorithm
-
-        )
+add_executable(cEssence practice/dynamicProgram/getLongestPalindrome.cpp)
